# SnackProject

./: .gitignore  CMakeLists.txt  README.md
resources/Image/: Button1.psd  GameOver.psd
src/: CMakeLists.txt  SnackMain.cpp
src/Food/: CMakeLists.txt  Food.cpp  Food.h
src/Game/: CMakeLists.txt  Game.cpp  Game.h
src/PutImage/: CMakeLists.txt  PutImage.cpp  PutImage.h
src/Snack/: CMakeLists.txt  Snack.cpp  Snack.h
src/Snake/: CMakeLists.txt  Snake.cpp  Snake.h
src/Window/: CMakeLists.txt  Window.cpp  Window.h
